:hammer: Template the Helm chart versions into Docker tags

--- a/helm-chart/templates/04-hub-deployment.yaml
+++ b/helm-chart/templates/04-hub-deployment.yaml
@@ -46,7 +46,7 @@ spec:
                 name: kubeshark-config-map
             - secretRef:
                 name: kubeshark-secret
-          image: '{{ .Values.tap.docker.registry }}/hub:{{ .Values.tap.docker.tag }}'
+          image: '{{ .Values.tap.docker.registry }}/hub:{{ not (eq .Values.tap.docker.tag "") | ternary .Values.tap.docker.tag .Chart.Version }}'
           imagePullPolicy: {{ .Values.tap.docker.imagepullpolicy }}
           readinessProbe:
             periodSeconds: 1
