--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -291,7 +291,7 @@ spec:
             - -servicemesh
             - -procfs
             - /hostproc
-          image: 'docker.io/kubeshark/worker:51.0.0'
+          image: 'docker.io/kubeshark/worker:v51.0.0'
           imagePullPolicy: Always
           name: sniffer
           env:
@@ -351,7 +351,7 @@ spec:
             - ./tracer
             - -procfs
             - /hostproc
-          image: 'docker.io/kubeshark/worker:51.0.0'
+          image: 'docker.io/kubeshark/worker:v51.0.0'
           imagePullPolicy: Always
           name: tracer
           env:
@@ -469,7 +469,7 @@ spec:
                 name: kubeshark-config-map
             - secretRef:
                 name: kubeshark-secret
-          image: 'docker.io/kubeshark/hub:51.0.0'
+          image: 'docker.io/kubeshark/hub:v51.0.0'
           imagePullPolicy: Always
           readinessProbe:
             periodSeconds: 1
@@ -535,7 +535,7 @@ spec:
               value: ' '
             - name: REACT_APP_HUB_PORT
               value: ':8899/api'
-          image: 'docker.io/kubeshark/front:51.0.0'
+          image: 'docker.io/kubeshark/front:v51.0.0'
           imagePullPolicy: Always
           name: kubeshark-front
           livenessProbe:
