:hammer: Add `ApprovedTenants` field to `AuthConfig` and enable auth by default

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -51,9 +51,10 @@ tap:
       values:
       - linux
   auth:
-    enabled: false
+    enabled: true
     approvedEmails: []
     approvedDomains: []
+    approvedTenants: []
   ingress:
     enabled: false
     className: ""
