:hammer: Disable auth by default

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -51,7 +51,7 @@ tap:
       values:
       - linux
   auth:
-    enabled: true
+    enabled: false
     approvedEmails: []
     approvedDomains: []
     approvedTenants: []
