--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -95,7 +95,7 @@ data:
     NAMESPACES: ''
     SCRIPTING_ENV: '{}'
     SCRIPTING_SCRIPTS: '{}'
-    AUTH_ENABLED: 'true'
+    AUTH_ENABLED: ''
     AUTH_APPROVED_EMAILS: ''
     AUTH_APPROVED_DOMAINS: ''
     AUTH_APPROVED_TENANTS: ''
