--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -100,6 +100,7 @@ data:
     AUTH_APPROVED_DOMAINS: ''
     AUTH_APPROVED_TENANTS: ''
     TELEMETRY_DISABLED: ''
+    REPLAY_DISABLED: ''
 ---
 # Source: kubeshark/templates/02-cluster-role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
