Add PF_RING related changes to docs and helm (#1471)
* Install pf-ring KMM Module and wait for it

* Add mode configuration

* save

* Update doc

* upd

* toc

* adjust template

* upd

* Add module cr verification job

* upd doc

* Fix binary name

* Add disable mode

* Update PF_RING.md

Some adjustments to the instructions.

* Update 15-pf-ring-kernel-module.yaml

Small syntax err

* upd

* merge master

---------

Co-authored-by: Alon Girmonsky <1990761+alongir@users.noreply.github.com>

--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -25,6 +25,23 @@ spec:
       name: kubeshark-worker-daemon-set
       namespace: kubeshark
     spec:
+      {{ if and (eq .Values.tap.kernelModule.enabled true) (eq .Values.tap.kernelModule.mode "kmm")}}
+      initContainers:
+      - name: wait-for-pf-ring
+        image: alpine:3.18
+        command: ["/bin/sh", "-c"]
+        args:
+        - >
+          while true; do
+            if lsmod | grep -q "pf_ring"; then
+              echo "pf_ring module is loaded.";
+              break;
+            else
+              echo "Waiting for pf_ring module to be loaded...";
+              sleep 5;
+            fi
+          done
+      {{ end }}
       containers:
         - command:
             - ./worker
@@ -37,11 +54,11 @@ spec:
           {{- end }}
             - -procfs
             - /hostproc
+          {{- if or (eq .Values.tap.kernelModule.enabled false) (eq .Values.tap.kernelModule.mode "kmm") }}
+            - -no-kernel-module
+          {{ end }}
           {{- if .Values.tap.debug }}
             - -debug
-          {{- end }}
-          {{- if .Values.tap.noKernelModule }}
-            - -no-kernel-module
           {{- end }}
           image: '{{ .Values.tap.docker.registry }}/worker:{{ not (eq .Values.tap.docker.tag "") | ternary .Values.tap.docker.tag (printf "v%s" .Chart.Version) }}'
           imagePullPolicy: {{ .Values.tap.docker.imagePullPolicy }}
@@ -68,7 +85,7 @@ spec:
                 {{- range .Values.tap.capabilities.networkCapture }}
                 {{ print "- " . }}
                 {{- end }}
-                {{- if not .Values.tap.noKernelModule }}
+                {{- if and (.Values.tap.kernelModule.enabled) (eq .Values.tap.kernelModule.mode "auto") }}
                 {{- range .Values.tap.capabilities.kernelModule }}
                 {{ print "- " . }}
                 {{- end }}
