--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -63,7 +63,13 @@ tap:
     annotations: {}
   ipv6: true
   debug: false
-  noKernelModule: false
+  kernelModule:
+    enabled: true
+    mode: auto
+    kernelMappings:
+    - regexp: '^.+$'
+      containerImage: 'kubeshark/pf-ring-module:${KERNEL_FULL_VERSION}'
+    imageRepoSecret: ""
   telemetry:
     enabled: true
   defaultFilter: ""
