Tracer, ServiceMesh - Disable by default and some docs updates (#1472)
* Disabled Tracer by default

As Tracer requires significantly more resources and elevated security capability, it is recommended to have it disabled by default and enabled on demand.

* Updated the tap.tls default value to false

* added description to the default and global KFL filters

* serviceMesh false by default

As serviceMesh requires elevated security permissions.
Furthermore this capability is required only in a fraction of the userbase. Some service mesh versions/configurations aren't supported. Therefore, it is recommended to start as disabled and enable on-demand

* Update the readme related to the service mesh default value

Set the default value of serviceMesh to false as among other things, it requires elevated security permissions and therefore should be enabled on demand.

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -39,8 +39,8 @@ tap:
       requests:
         cpu: 50m
         memory: 50Mi
-  serviceMesh: true
-  tls: true
+  serviceMesh: false
+  tls: false
   ignoreTainted: false
   labels: {}
   annotations: {}
