--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -32,6 +32,13 @@ tap:
       requests:
         cpu: 50m
         memory: 50Mi
+    tracer:
+      limits:
+        cpu: 750m
+        memory: 1Gi
+      requests:
+        cpu: 50m
+        memory: 150Mi
     hub:
       limits:
         cpu: 750m
